# a_star_pathfinding

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  main.py  node.py
cpp/: CMakeLists.txt  Makefile  a_star.cpp  node.hpp
cpp/aStar/: CMakeLists.txt
cpp/aStar/src/: a_star.cpp
cpp/node/: CMakeLists.txt
cpp/node/include/node/: node.hpp
py/: main.py
